# esp32-Bluetooth-keyboard-input

./: CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.featheresp32  sdkconfig.featheresp32.old  sdkconfig.old
data/: FT64.fnt  test.fnt
src/: CMakeLists.txt  Kconfig.projbuild  esp_hid_gap.c  fontx.h  keymapping.c  keymapping.h  main.c  screenTests.c  screenTests.h  st7789.h
